[gd_scene load_steps=3 format=3 uid="uid://bbe7i8g4nyqp1"]

[ext_resource type="Script" path="res://src/round_game/round_results/round_results_screen.gd" id="1_eay3j"]
[ext_resource type="PackedScene" uid="uid://doly0aqjw7m6l" path="res://src/round_game/round_results/dyad_display/dyad_results_panel.tscn" id="1_pya0j"]

[node name="RoundResultsSreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eay3j")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainPanel"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Round End"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dyad0" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_pya0j")]
unique_name_in_owner = true
layout_mode = 2
_player1_index = 0
_player2_index = 1

[node name="Dyad1" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_pya0j")]
unique_name_in_owner = true
layout_mode = 2
_player1_index = 2
_player2_index = 3

[node name="NextRoundBtn" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Next Round"

[node name="BetweenTimer" type="Timer" parent="."]
one_shot = true

[connection signal="finished_animation" from="PanelContainer/VBoxContainer/HBoxContainer/Dyad0" to="." method="_on_dyad_finished_animation"]
[connection signal="finished_animation" from="PanelContainer/VBoxContainer/HBoxContainer/Dyad1" to="." method="_on_dyad_finished_animation"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/NextRoundBtn" to="." method="_on_button_pressed"]
[connection signal="timeout" from="BetweenTimer" to="." method="_solve_point"]
